--- a/index.ipynb
+++ b/index.ipynb
@@ -104,26 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
-       " \"Hi Jan, I'm so glad to be working with you!\",\n",
-       " \"Hi Meryl, I'm so glad to be working with you!\"]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-9aa6b34be883>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-9aa6b34be883>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    welcome_messages.append(new_employee.title() +)\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "welcome_messages = []\n",
     "for new_employee in new_employees:\n",
-    "    welcome_messages.append(new_employee.title() + \", I'm so glad to be working with you!\" )\n",
+    "    welcome_messages.append(new_employee.title())\n",
     "    \n",
     "welcome_messages"
    ]
